Fixed image input description on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -185,7 +185,7 @@ button:focus,
   position: absolute;
   top: 0;
   width: 100%;
-  opacity: 0;
+  opacity: 0.25;
   transition: opacity var(--transition-duration) var(--transition-function);
 }
 
